--- a/automa/basicanvas.htm
+++ b/automa/basicanvas.htm
@@ -35,13 +35,14 @@
 <pre id="editor">{
 "comment":"the Stephen Wolfram's rule 30 automa",
 "cells":[
-	{"x":200,"y":10,"status":"active cell","timerange":[1,2300]}
+	{"x":150,"y":10,"status":"active cell","timerange":[1,2300]}
 ],
 "palette":[
-	{"status":"active cell","color":"rgb(250,10,10)","timerange":[1,20]},
-	{"status":"active cell","color":"rgb(10,250,10)","timerange":[21,40]},
-	{"status":"active cell","color":"rgb(10,250,250)","timerange":[41,9000]},
-	{"status":"default","color":"white","timerange":[1,2300]}
+	{"status":"active cell","color":"#FF1010","timerange":[1,20]},
+	{"status":"active cell","color":"#008302","timerange":[21,40]},
+	{"status":"active cell","color":"#FF2EF3","timerange":[41,9000]},
+	{"status":"active cell 2","color":"#FFBE2E","timerange":[41,9000]},
+	{"status":"default","color":"white"}
 ],
 "rules":[
 {"ID":"left",
@@ -88,7 +89,7 @@ var compileRun=function(){
 $(function(){
 	var canvas = document.getElementById('target_canvas');
 	//global variable to store the automata
-	automa=new Automata(600,400);
+	automa=new Automata(300,200);
 	compileRun();
 	if (canvas.getContext){
 		//let's add a listener for editor content changes
