fixed error in editor comment

--- a/automa/basicanvas.htm
+++ b/automa/basicanvas.htm
@@ -119,6 +119,6 @@ $(function(){
 	}
 });
 </script>
-<span>The nice editor is based on the fantastic <a href="http://ace.ajax.org/">ACE editor</a>, using ASCII mode</span>
+<span>The editor is based on the fantastic <a href="http://ace.ajax.org/">ACE editor</a>, using JSON mode</span>
 </body>
 </html>
